# scbiot

./: CHANGES.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt
_build/doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  ot.doctree  preprocessing.doctree  tutorials.doctree  usage.doctree
_build/doctrees/tutorials/: paired_multiomics.doctree  paired_multiomics_10x_multiome.doctree  paired_multiomics_snare_seq.doctree  scatac_seq.doctree  scrna_lung_atlas_benchmarking.doctree  scrna_seq.doctree  scrna_supervised_supbiot.doctree  unpaired_multiomics.doctree
_build/html/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  ot.html  preprocessing.html  py-modindex.html  search.html  searchindex.js  tutorials.html  usage.html
_build/html/_sources/: api.rst.txt  index.rst.txt  installation.rst.txt  preprocessing.md.txt  tutorials.rst.txt  usage.rst.txt
_build/html/tutorials/: paired_multiomics.html  paired_multiomics_10x_multiome.html  paired_multiomics_snare_seq.html  scatac_seq.html  scrna_lung_atlas_benchmarking.html  scrna_seq.html  scrna_supervised_supbiot.html  unpaired_multiomics.html
docs/source/: api.rst  conf.py  index.rst  installation.rst  ot.md  preprocessing.md  tutorials.rst  usage.rst
docs/source/tutorials/: 1_scrna_seq.rst  1a_scrna_lung_atlas_benchmarking.rst  1b_scrna_supervised_supbiot.rst  2_scrna_seq_r.rst  3_scatac_seq.rst  4_paired_multiomics.rst  4a_paired_multiomics_10x_multiome.rst  4b_paired_multiomics_snare_seq.rst  5_unpaired_multiomics.rst  paired_multiomics.rst  paired_multiomics_10x_multiome.rst  paired_multiomics_snare_seq.rst  scatac_seq.rst  scrna_lung_atlas_benchmarking.rst  scrna_seq.rst  scrna_seq_r.rst  scrna_supervised_supbiot.rst  unpaired_multiomics.rst
examples/: atac_brain_large_window_integration.ipynb  multiome_integration.ipynb  paired_Chen-2019_integration.ipynb  schematic.ipynb  unpaired_Yao-2021_integration.ipynb  unsupervised_lung_benchmarking.ipynb
examples/R/: .Rhistory  anndata2seurat.ipynb  scRNA-seq_scbiot_in_R.Rmd
examples/R/scbiot_ckpt/: encoder.pt  model.pt
examples/scbiot_ckpt/: encoder.pt  model.pt
src/scbiot/: __about__.py  __init__.py
src/scbiot/models/: __init__.py  vae.py  vae_train.py
src/scbiot/ot/: __init__.py  coembedding.py  integrate.py  integrate_paired.py  integrate_unpaired.py
src/scbiot/pp/: __init__.py  peaks.py  setup_anndata.py
tests/: conftest.py
(+18 files in other folders)
